--- a/css/main.css
+++ b/css/main.css
@@ -295,9 +295,6 @@ h6 {
 ul {
   list-style: square;
 }
-a {
-  word-wrap: break-word;
-}
 hr {
   margin: 40px 0;
   height: 3px;
@@ -480,15 +477,47 @@ td {
   opacity: 0;
 }
 @font-face {
-  font-family: 'default';
-  src: url("../fonts/icon-default/icomoon.eot?-9394c0");
-  src: url("../fonts/icon-default/icomoon.eot?#iefix-9394c0") format('embedded-opentype'), url("../fonts/icon-default/icomoon.woff?-9394c0") format('woff'), url("../fonts/icon-default/icomoon.ttf?-9394c0") format('truetype'), url("../fonts/icon-default/icomoon.svg?-9394c0#default") format('svg');
+  font-family: 'Lato';
+  src: url("../fonts/lato/Lato-Regular.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/lato/Lato-Regular.eot?#iefix") format('embedded-opentype'), url("../fonts/lato/Lato-Regular.woff") format('woff'), url("../fonts/lato/Lato-Regular.ttf") format('truetype');
+  font-style: normal;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato/Lato-Bold.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/lato/Lato-Bold.eot?#iefix") format('embedded-opentype'), url("../fonts/lato/Lato-Bold.woff") format('woff'), url("../fonts/lato/Lato-Bold.ttf") format('truetype');
+  font-style: normal;
+  font-weight: bold;
+  text-rendering: optimizeLegibility;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato/Lato-Italic.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/lato/Lato-Italic.eot?#iefix") format('embedded-opentype'), url("../fonts/lato/Lato-Italic.woff") format('woff'), url("../fonts/lato/Lato-Italic.ttf") format('truetype');
+  font-style: italic;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato/Lato-BoldItalic.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/lato/Lato-BoldItalic.eot?#iefix") format('embedded-opentype'), url("../fonts/lato/Lato-BoldItalic.woff") format('woff'), url("../fonts/lato/Lato-BoldItalic.ttf") format('truetype');
+  font-style: italic;
+  font-weight: bold;
+  text-rendering: optimizeLegibility;
+}
+@font-face {
+  font-family: 'linecons';
+  src: url("../fonts/icon-linecons/icomoon.eot?-9394c0");
+  src: url("../fonts/icon-linecons/icomoon.eot?#iefix-9394c0") format('embedded-opentype'), url("../fonts/icon-linecons/icomoon.woff?-9394c0") format('woff'), url("../fonts/icon-linecons/icomoon.ttf?-9394c0") format('truetype'), url("../fonts/icon-linecons/icomoon.svg?-9394c0#linecons") format('svg');
   font-weight: normal;
   font-style: normal;
 }
 [class^="icon-"],
 [class*=" icon-"] {
-  font-family: 'default';
+  font-family: 'linecons';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -518,152 +547,182 @@ td {
 .icon-heart {
   font-size: 14px;
 }
+.menu-item-icon.menu-item-icon.menu-item-icon {
+  font-size: 20px;
+}
+.icon-external-link {
+  font-size: 14px;
+}
 .icon-logo:before {
-  content: "\e61c";
-}
-.icon-home:before {
-  content: "\e605";
-}
-.icon-categories:before {
-  content: "\e625";
-}
-.icon-archives:before {
-  content: "\e60b";
-}
-.icon-tags:before {
-  content: "\e610";
-}
-.icon-about:before {
-  content: "\e612";
-}
-.icon-feed:before {
-  content: "\e62b";
-}
-.icon-external-link:before {
-  content: "\e607";
-}
-.icon-heart:before {
-  content: "\e601";
-}
-.icon-account-circle:before {
-  content: "\e600";
-}
-.icon-favorite-outline:before {
-  content: "\e602";
-}
-.icon-get-app:before {
-  content: "\e603";
-}
-.icon-grade:before {
-  content: "\e604";
-}
-.icon-invert-colors:before {
-  content: "\e606";
-}
-.icon-room:before {
-  content: "\e608";
-}
-.icon-schedule:before {
-  content: "\e609";
-}
-.icon-search:before {
-  content: "\e60a";
-}
-.icon-location-on:before {
-  content: "\e60c";
-}
-.icon-brightness-high:before {
-  content: "\e60d";
-}
-.icon-brightness-low:before {
-  content: "\e60e";
-}
-.icon-brightness-medium:before {
-  content: "\e60f";
-}
-.icon-format-quote:before {
-  content: "\e611";
-}
-.icon-keyboard-arrow-down:before {
-  content: "\e613";
-}
-.icon-keyboard-arrow-left:before {
-  content: "\e614";
-}
-.icon-keyboard-arrow-right:before {
-  content: "\e615";
-}
-.icon-keyboard-arrow-up:before {
-  content: "\e616";
-}
-.icon-keyboard-capslock:before {
-  content: "\e617";
-}
-.icon-audiotrack:before {
-  content: "\e618";
-}
-.icon-brightness-1:before {
-  content: "\e619";
-}
-.icon-brightness-2:before {
-  content: "\e61a";
-}
-.icon-brightness-3:before {
-  content: "\e61b";
-}
-.icon-brightness-4:before {
-  content: "\e61c";
-}
-.icon-brightness-5:before {
-  content: "\e61d";
-}
-.icon-brightness-6:before {
-  content: "\e61e";
-}
-.icon-brightness-7:before {
-  content: "\e61f";
-}
-.icon-filter-vintage:before {
-  content: "\e620";
-}
-.icon-hdr-strong:before {
-  content: "\e621";
-}
-.icon-nature-people:before {
-  content: "\e622";
-}
-.icon-timelapse:before {
-  content: "\e623";
-}
-.icon-timer-auto:before {
-  content: "\e624";
-}
-.icon-layers:before {
-  content: "\e625";
-}
-.icon-pin-drop:before {
-  content: "\e626";
-}
-.icon-arrow-drop-down:before {
-  content: "\e627";
-}
-.icon-arrow-drop-up:before {
-  content: "\e628";
-}
-.icon-check:before {
   content: "\e629";
 }
-.icon-close:before {
-  content: "\e62a";
+.icon-home:before {
+  content: "\e62e";
 }
-.icon-whatshot:before {
-  content: "\e62b";
+.icon-categories:before {
+  content: "\e620";
 }
-.icon-radio-button-on:before {
-  content: "\e62c";
+.icon-archives:before {
+  content: "\e625";
+}
+.icon-tags:before {
+  content: "\e60c";
+}
+.icon-feed:before {
+  content: "\e60e";
+}
+.icon-heart:before {
+  content: "\e600";
+}
+.icon-about:before {
+  content: "\e607";
+}
+.icon-external-link:before {
+  content: "\e622";
+}
+.icon-heart:before {
+  content: "\e600";
+}
+.icon-cloud:before {
+  content: "\e601";
 }
 .icon-star:before {
+  content: "\e602";
+}
+.icon-tv:before {
+  content: "\e603";
+}
+.icon-sound:before {
+  content: "\e604";
+}
+.icon-video:before {
+  content: "\e605";
+}
+.icon-trash:before {
+  content: "\e606";
+}
+.icon-user:before {
+  content: "\e607";
+}
+.icon-key:before {
+  content: "\e608";
+}
+.icon-search:before {
+  content: "\e609";
+}
+.icon-settings:before {
+  content: "\e60a";
+}
+.icon-camera:before {
+  content: "\e60b";
+}
+.icon-tag:before {
+  content: "\e60c";
+}
+.icon-lock:before {
+  content: "\e60d";
+}
+.icon-bulb:before {
+  content: "\e60e";
+}
+.icon-pen:before {
+  content: "\e60f";
+}
+.icon-diamond:before {
+  content: "\e610";
+}
+.icon-display:before {
+  content: "\e611";
+}
+.icon-location:before {
+  content: "\e612";
+}
+.icon-eye:before {
+  content: "\e617";
+}
+.icon-bubble:before {
+  content: "\e618";
+}
+.icon-stack:before {
+  content: "\e619";
+}
+.icon-cup:before {
+  content: "\e61a";
+}
+.icon-phone:before {
+  content: "\e61b";
+}
+.icon-news:before {
+  content: "\e61c";
+}
+.icon-mail:before {
+  content: "\e61d";
+}
+.icon-like:before {
+  content: "\e61e";
+}
+.icon-photo:before {
+  content: "\e61f";
+}
+.icon-note:before {
+  content: "\e620";
+}
+.icon-clock:before {
+  content: "\e621";
+}
+.icon-paperplane:before {
+  content: "\e622";
+}
+.icon-params:before {
+  content: "\e623";
+}
+.icon-banknote:before {
+  content: "\e624";
+}
+.icon-data:before {
+  content: "\e625";
+}
+.icon-music:before {
+  content: "\e626";
+}
+.icon-megaphone:before {
+  content: "\e627";
+}
+.icon-study:before {
+  content: "\e628";
+}
+.icon-lab:before {
+  content: "\e629";
+}
+.icon-food:before {
+  content: "\e62a";
+}
+.icon-t-shirt:before {
+  content: "\e62b";
+}
+.icon-fire:before {
+  content: "\e62c";
+}
+.icon-clip:before {
   content: "\e62d";
+}
+.icon-shop:before {
+  content: "\e62e";
+}
+.icon-calendar:before {
+  content: "\e62f";
+}
+.icon-wallet:before {
+  content: "\e630";
+}
+.icon-vynil:before {
+  content: "\e631";
+}
+.icon-truck:before {
+  content: "\e632";
+}
+.icon-world:before {
+  content: "\e633";
 }
 .post pre,
 .post .highlight {
@@ -950,16 +1009,6 @@ body {
     border-top: 1px solid #ddd;
   }
 }
-@media (min-width: 768px) and (max-width: 991px) {
-  .site-nav {
-    display: block !important;
-  }
-}
-@media (min-width: 992px) {
-  .site-nav {
-    display: block !important;
-  }
-}
 .menu {
   margin-top: 20px;
   padding-left: 0;
@@ -1148,7 +1197,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #a22590;
+  background: #8a11ff;
 }
 .sidebar-nav {
   margin: 0;
@@ -1839,57 +1888,6 @@ body {
 }
 .theme-next #ds-thread #ds-reset .ds-service-list .ds-more-services:hover {
   background: none;
-}
-.theme-next .this_ua {
-  background-color: #ccc !important;
-  border-radius: 4px;
-  padding: 0 5px !important;
-  margin: 0 1px !important;
-  border: 1px solid #bbb !important;
-  color: #fff;
-}
-.theme-next .this_ua.admin {
-  background-color: #d9534f !important;
-  border-color: #d9534f !important;
-}
-.theme-next .this_ua.platform.iOS,
-.theme-next .this_ua.platform.Mac,
-.theme-next .this_ua.platform.Windows {
-  background-color: #39b3d7 !important;
-  border-color: #46b8da !important;
-}
-.theme-next .this_ua.platform.Linux {
-  background-color: #3a3a3a !important;
-  border-color: #1f1f1f !important;
-}
-.theme-next .this_ua.platform.Android {
-  background-color: #00c47d !important;
-  border-color: #01b171 !important;
-}
-.theme-next .this_ua.browser.Mobile,
-.theme-next .this_ua.browser.Chrome {
-  background-color: #5cb85c !important;
-  border-color: #4cae4c !important;
-}
-.theme-next .this_ua.browser.Firefox {
-  background-color: #f0ad4e !important;
-  border-color: #eea236 !important;
-}
-.theme-next .this_ua.browser.Maxthon,
-.theme-next .this_ua.browser.IE {
-  background-color: #428bca !important;
-  border-color: #357ebd !important;
-}
-.theme-next .this_ua.browser.baidu,
-.theme-next .this_ua.browser.UCBrowser,
-.theme-next .this_ua.browser.Opera {
-  background-color: #d9534f !important;
-  border-color: #d43f3a !important;
-}
-.theme-next .this_ua.browser.Android,
-.theme-next .this_ua.browser.QQBrowser {
-  background-color: #78ace9 !important;
-  border-color: #4cae4c !important;
 }
 .post-spread {
   margin-top: 20px;
